[build-system]
requires = ["setuptools >= 66.0"]
build-backend = "setuptools.build_meta"

[project]
name = "analog_garage_test"
version = "0.1"
description = "SMS Message Simulation"
readme = "README.md"
requires-python = ">= 3.12"
authors = [
    {name = "Shannon McInnis", email = "shannonmcin@gmail.com"}
]

[project.scripts]
producer = "analog_garage_test.producer.main:main"
sender = "analog_garage_test.sender.main:main"
file_monitor = "analog_garage_test.progress_monitor.main:file_monitor"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
include_namespace_packages = true
show_missing = true
skip_empty = true
exclude_also = ["@abstractmethod"]